# radia-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  report.md
benches/: intersection_benchmark.rs  kernel_benchmark.rs
examples/: 1million.yaml  cask.yaml  co60_effective_dose.yaml  distance_attenuation.yaml  hot_cell.yaml  nist.yaml  no_buildup.yaml  pipe.yaml  simple001.yaml
radia-cli/: Cargo.toml
radia-cli/benches/: intersection_benchmark.rs  kernel_benchmark.rs
radia-cli/src/: kernel.rs  lib.rs  main.rs
radia-core/: Cargo.toml  README.md
radia-core/benches/: intersection_benchmark.rs  kernel_benchmark.rs
radia-core/src/: buildup.rs  config.rs  constants.rs  csg.rs  kernel.rs  lib.rs  mass_attenuation.rs  material.rs  physics.rs  primitive.rs  source.rs
radia-gui/: README.md  index.html  package.json  vite.config.ts
radia-gui/src/: App.css  App.tsx
radia-gui/src-tauri/: Cargo.toml  tauri.conf.json
radia-gui/src-tauri/src/: lib.rs  main.rs
radia-gui/src/assets/: radia-schema.json
radia-gui/src/components/: CellPanel.tsx  Editor.tsx  ValidationPanel.tsx  Viewer3D.tsx  buildCsgMesh.ts  shapeToGeometry.ts
radia-gui/src/types/: geometry.ts
radia-input/: Cargo.toml  test_miette.rs
radia-input/src/: atomic_number.rs  buildup.rs  common.rs  csg_parser.rs  detector.rs  lib.rs  material.rs  source.rs  world.rs
radia-report/: Cargo.toml
radia-report/benches/: collector_benchmark.rs
radia-report/src/: collector.rs  lib.rs
radia-wasm/: Cargo.toml  csg-visualizer.html
radia-wasm/src/: lib.rs
scripts/: fetch_nist.py  run_all_examples.sh
src/: buildup.rs  csg.rs  kernel.rs  lib.rs  material.rs  shape.rs  source.rs
