[workspace]
members = [
    "radia-core",
    "radia-cli",
    "radia-input"
]
resolver = "2"

[workspace.dependencies]
glam = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
miette = { version = "7", features = ["fancy"] }

criterion = "0.5.1"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
