[workspace]
members = [
    "radia-core",
    "radia-cli",
    "radia-input",
    "radia-report",
    "radia-gui/src-tauri"
]
resolver = "2"

[workspace.dependencies]
glam = { version = "0.32.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"

criterion = "0.5.1"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
