[package]
name = "radia-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
radia-core = { path = "../radia-core" }
radia-input = { path = "../radia-input" }
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true


[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
