[package]
name = "radia-core"
version = "0.1.0"
edition = "2024"

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

[[bench]]
name = "intersection_benchmark"
harness = false