[package]
name = "radia-core"
version = "0.1.0"
edition = "2024"

[dependencies]
glam.workspace = true
thiserror.workspace = true
rayon = "1.11.0"

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true

[[bench]]
name = "intersection_benchmark"
harness = false

[[bench]]
name = "kernel_benchmark"
harness = false