[package]
name = "radia-input"
version = "0.1.0"
edition = "2024"

[dependencies]
radia-core = { path = "../radia-core" }
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true
