[package]
name = "radia-input"
version = "0.1.0"
edition = "2024"

[dependencies]
radia-core = { path = "../radia-core" }
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
serde-saphyr = { version = "0.0.22", features = ["garde", "miette"] }
garde = { version = "0.22", features = ["derive"] }

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true
