[package]
name = "radia-gui"
version = "0.1.0"
description = "Radia GUI - YAML editor and 3D geometry viewer"
authors = ["radia-rs contributors"]
edition = "2021"

[lib]
name = "radia_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
radia-input = { path = "../../radia-input" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
radia-core = { version = "0.1.0", path = "../../radia-core" }
